--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>client</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Roboto:300,400,500,700,900|Material+Icons' rel="stylesheet">
+  <title>FCC Vue Challenge</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
