--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
-  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Roboto:300,400,500,700,900|Material+Icons' rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Material+Icons' rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>FCC Vue Challenge</title>
 </head>
 
